[package]
name = "json-generator"
version = "0.1.4"
authors = ["Timothy Bess <tdbgamer@gmail.com>"]
edition = "2018"
description = "CLI tool to generate JSON from simple DSL"
repository = "https://github.com/tdbgamer/json-generator-rs"
readme = "README.md"
license = "MPL-2.0"

[[bin]]
name = "jg"
path = "src/main.rs"

[dependencies]
pest = "2.1.0"
pest_derive = "2.1.0"
serde_json = "1.0.40"
structopt = "0.2.18"
failure = "0.1.5"
exitfailure = "0.5.1"
